--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Welcome!</title>
     <script type="text/javascript">
-	window.location.replace("http://stackoverflow.com");
+	window.location.replace("http://iusemws.github.io/demodoctor/src/index.html");
     </script>
   </head>
   <body>
