--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,16 @@
 <html>
 <head>
+
+<meta charset="UTF-8">
+    <title>Botastic by DavidHeinze</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="../src/assets/normalize.css" media="screen">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="../src/assets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../src/assets/github-light.css" media="screen">
+
+
+
     <title>Angular 2 QuickStart</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,6 +30,60 @@
 </head>
 <!-- 3. Display the application -->
 <body>
+
+<section class="page-header">
+      <h1 class="project-name">Dr. Botastic</h1>
+      <h2 class="project-tagline"></h2>
+      <a href="https://github.com/DavidHeinze/botastic" class="btn">Ärzteteam</a>
+      <a href="https://github.com/DavidHeinze/botastic/zipball/master" class="btn">Praxis</a>
+      <a href="https://github.com/DavidHeinze/botastic/tarball/master" class="btn">Vater Check-Up</a>
+      <a href="https://github.com/DavidHeinze/botastic/tarball/master" class="btn">Kontakt</a>
+    </section>
+
+    <section class="main-content">
+      <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Gemeinsam für ihre Gesundheit</h3>
+
+<p>Mit Herz und Verstand
+
+Willkommen! Als Hausärzte und Internisten sind wir stets an Ihrer Seite. In unseren Behandlungsräumen oder bei Ihnen zu Hause.
+
+Wir beraten in alltäglichen Gesundheitsfragen und in komplexen Krankheitssituationen. Gerade bei letzteren ist uns eine intensive Betreuung wichtig, die wir gerne in Kooperation mit kompetenten Spezialisten vornehmen.
+
+PD Dr. med. Mark Schäfer
+Dr. med. Henrik Lamers
+Dr. med. Anke Stark
+Dr. med. Gudrun Keppler
+Dr. med. Christine Baldauf
+Dr. Christine Bruni, MD MPH IBCLC</p>
+
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Aktuelles</h3>
+
+<p>Die innovative Arztpraxis 2015
+
+Ausgezeichnete Idee – unsere Väter-Sprechstunde
+
+Wir freuen uns über eine ganz besondere Auszeichnung: Beim bundesweit ausgeschriebenen Wettbewerb „Die innovative Praxis“ hat unsere Praxis den 3. Platz gewonnen. Unsere seit 3 Jahren etablierte Sprechstunde „Check-up und Beratung für werdende Väter“ hat nicht nur viele Männer, sondern auch die Jury in Berlin überzeugt, wo wir den Preis am 12.02.2016 entgegennehmen durften.
+
+Den ausführlichen Bericht lesen Sie hier.</p>
+
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+
+
+    </section>
+
+  
+
+
+
+<section class="main-content">
     <pairedchatting-app>Loading...</pairedchatting-app>
+    </section>
+
 </body>
 </html>
