textbox received proper size and is DISRUPTIVE

--- a/src/index.html
+++ b/src/index.html
@@ -82,8 +82,8 @@ Den ausführlichen Bericht lesen Sie hier.</p>
 
 
 <section class="main-content">
-    <pairedchatting-app>Loading...</pairedchatting-app>
-    </section>
+    <pairedchatting-app>Lade Chat ...</pairedchatting-app>
+</section>
 
 </body>
 </html>
