added background picture

--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,13 @@
 <head>
 
 <meta charset="UTF-8">
-    <title>Botastic by DavidHeinze</title>
+    <title>Botastic</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../src/assets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="../src/assets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="../src/assets/github-light.css" media="screen">
 
-
-
-    <title>Angular 2 QuickStart</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -31,13 +28,15 @@
 <!-- 3. Display the application -->
 <body>
 
-<section class="page-header">
-      <h1 class="project-name">Dr. Botastic</h1>
+<section class="page-header doc-pic">
+    <div class="">
+      <h1 class="project-name" style="color: rgba(0,0,0,0.8);">Dr. Botastic</h1>
       <h2 class="project-tagline"></h2>
-      <a href="https://github.com/DavidHeinze/botastic" class="btn">Ärzteteam</a>
-      <a href="https://github.com/DavidHeinze/botastic/zipball/master" class="btn">Praxis</a>
-      <a href="https://github.com/DavidHeinze/botastic/tarball/master" class="btn">Vater Check-Up</a>
-      <a href="https://github.com/DavidHeinze/botastic/tarball/master" class="btn">Kontakt</a>
+      <a href="https://github.com/DavidHeinze/botastic" class="btn" style="background-color: rgba(0,0,0,0.2);">Ärzteteam</a>
+      <a href="https://github.com/DavidHeinze/botastic/zipball/master" class="btn" style="background-color: rgba(0,0,0,0.2);">Praxis</a>
+      <a href="https://github.com/DavidHeinze/botastic/tarball/master" class="btn" style="background-color: rgba(0,0,0,0.2);">Vater Check-Up</a>
+      <a href="https://github.com/DavidHeinze/botastic/tarball/master" class="btn" style="background-color: rgba(0,0,0,0.2);">Kontakt</a>
+    </div>
     </section>
 
     <section class="main-content">
