--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,11 @@
     </div>
     </section>
 
+<section class="main-content">
+    <h3>Contact us via the Botastic-Chat</h3><br>
+    <pairedchatting-app>Loading Chat ...</pairedchatting-app>
+</section>
+
     <section class="main-content">
       <h3>
       <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Working together for your well-being</h3>
@@ -71,10 +76,6 @@
       </div>
 
     </section>
-
-<section class="main-content">
-    <pairedchatting-app>Loading Chat ...</pairedchatting-app>
-</section>
 
 </body>
 </html>
