--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,10 @@
     </section>
 
 <section class="main-content">
-    <h3>Contact us via the Botastic-Chat</h3><br>
+    <h3>Contact us via the Botastic-Chat</h3>
+    <p style="
+    font-size: 14px;
+">You have a question for our team? Before you call us, try our new <b>Botastic-Chat</b> for a <b>simplified and faster communication</b>. The new and best way of comnmunication. If you still have questions, you can still call uns.</p>
     <pairedchatting-app>Loading Chat ...</pairedchatting-app>
 </section>
 
