--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
     <p style="
     font-size: 14px;
 ">You have a question for our team? Before you call us, try our new <b>Botastic-Chat</b> for a <b>simplified and faster communication</b>. The new and best way of comnmunication. If you still have questions, you can still call uns.</p>
-    <pairedchatting-app>Loading Chat ...</pairedchatting-app>
+    <pairedchatting-app>Loading Chat ... This will take about 15 seconds.</pairedchatting-app>
 </section>
 
     <section class="main-content">
