--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,9 @@
     <p style="
     font-size: 14px;
 ">You have a question for our team? Before you call us, try our new <b>Botastic-Chat</b> for a <b>simplified and faster communication</b>. The new and best way of comnmunication. If you still have questions, you can still call uns.</p>
+    <p style="
+    font-size: 14px;
+              ">For example you can ask us about our <b>opening hours</b>, our <b>doctors</b>, our <b>address</b>, an <b>appointment</b>, a <b>prescription</b> or anything else.</p>
     <pairedchatting-app>Loading Chat ... This will take about 15 seconds.</pairedchatting-app>
 </section>
 
