--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,15 @@
     font-size: 14px;
               ">For example you can ask us about our <b>opening hours</b>, our <b>doctors</b>, our <b>address</b>, an <b>appointment</b>, a <b>prescription</b> or anything else.</p>
     <pairedchatting-app>Loading Chat ... This will take about 15 seconds.</pairedchatting-app>
+    <p style="
+    font-size: 14px;
+    color: #888;
+    ">Sample questions:<br>
+              <i>What are your opening hours?</i><br>
+              <i>I need an urgent appointment. When can I get one?</i><br>
+              <i>I have lost my meds. Can I get a new prescription?</i><br>
+              You can vary the sentences and words or just ask something else!
+              </p>
 </section>
 
     <section class="main-content">
