--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,9 @@
               ">For example you can ask us about our <b>opening hours</b>, our <b>doctors</b>, our <b>address</b>, an <b>appointment</b>, a <b>prescription</b> or anything else.</p>
     <pairedchatting-app>Loading Chat ... This will take about 15 seconds.</pairedchatting-app>
     <p style="
-    font-size: 14px;
+    font-size: 12px;
     color: #888;
+    margin-top: 25px;
     ">Sample questions:<br>
               <i>What are your opening hours?</i><br>
               <i>I need an urgent appointment. When can I get one?</i><br>
