--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
               <i>What are your opening hours?</i><br>
               <i>I need an urgent appointment. When can I get one?</i><br>
               <i>I have lost my meds. Can I get a new prescription?</i><br>
-              <i>Fri 09:00 Random Name</i><br>
+              <i>Fri 09:00 Jonathan E. Doe</i><br>
               You can vary the sentences and words or just ask something else!
               </p>
 </section>
